[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskflow"
version = "1.0.0"
description = "TaskFlow — a simple CLI to-do manager"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["click>=8.0"]

[project.scripts]
taskflow = "taskflow.cli:main"
